--- a/css/footer.css
+++ b/css/footer.css
@@ -3,3 +3,9 @@
     height: 8rem;
     background-color:var(--escuro);
 }
+/*=====================responsividade 400px===================*/
+@media (max-width: 400px) {
+    .footer{
+        width: 100%;
+    }   
+}
