--- a/css/header.css
+++ b/css/header.css
@@ -31,3 +31,18 @@ nav > a {
     color: var(--marrom-avermelhado);
     font-size: 1.6rem;
 }
+/*=====================responsividade 400px===================*/
+@media (max-width: 400px) {
+    header{
+        width: 100%;
+    }   
+    .title{
+        padding-left: 0;
+    }
+    header nav{
+        padding-left: 0;
+    }
+    nav > a{
+        font-size: 1.4rem;
+    }
+}
