--- a/css/footer.css
+++ b/css/footer.css
@@ -4,7 +4,13 @@
     background-color:var(--escuro);
 }
 /*=====================responsividade 400px===================*/
-@media (max-width: 400px) {
+@media (max-width: 450px) {
+    .footer{
+        width: 100%;
+    }   
+}
+/*=====================responsividade 1440px===================*/
+@media (max-width: 1440px) {
     .footer{
         width: 100%;
     }   
