--- a/css/header.css
+++ b/css/header.css
@@ -32,7 +32,7 @@ nav > a {
     font-size: 1.6rem;
 }
 /*=====================responsividade 400px===================*/
-@media (max-width: 400px) {
+@media (max-width: 450px) {
     header{
         width: 100%;
     }   
@@ -44,5 +44,18 @@ nav > a {
     }
     nav > a{
         font-size: 1.4rem;
+    }
+}
+/*=====================responsividade 1440px===================*/
+@media (max-width: 1440px) {
+    header{
+        width: 100%;
+    }   
+    
+    header h1{
+        font-size: 3rem;
+    }
+    nav > a{
+        font-size: 3rem;
     }
 }
