--- a/css/conteudo.css
+++ b/css/conteudo.css
@@ -69,3 +69,20 @@ main{
         font-size: 2.5rem;
     }
 }
+/*=====================responsividade 1024px===================*/
+@media (max-width: 1024px) {
+    main{
+        width: 100%;
+    }   
+    .conteudo img{
+        border-radius: 1.5rem;
+        width: 90%;
+        height: 50%;
+    }
+    .conteudo h2{
+        font-size: 2rem;
+    }
+    .conteudo p {
+        font-size: 1.8rem;
+    }
+}
