--- a/css/footer.css
+++ b/css/footer.css
@@ -15,3 +15,9 @@
         width: 100%;
     }   
 }
+/*=====================responsividade 1024px===================*/
+@media (max-width: 1024px) {
+    .footer{
+        width: 100%;
+    }   
+}
