--- a/css/header.css
+++ b/css/header.css
@@ -59,3 +59,16 @@ nav > a {
         font-size: 3rem;
     }
 }
+/*=====================responsividade 1024px===================*/
+@media (max-width: 1024px) {
+    header{
+        width: 100%;
+    }   
+    
+    header h1{
+        font-size: 2rem;
+    }
+    nav > a{
+        font-size: 2rem;
+    }
+}
