--- a/css/conteudo.css
+++ b/css/conteudo.css
@@ -74,6 +74,9 @@ main{
     main{
         width: 100%;
     }   
+    .conteudo{
+        margin: 2rem 5rem;
+    }
     .conteudo img{
         border-radius: 1.5rem;
         width: 90%;
